added accept application and reject application functionality