@@ -5,9 +5,8 @@ import com.job.jobportal.Model.JobInfo;
 import com.job.jobportal.Model.UserInfo;
 import com.job.jobportal.Repository.JobinfoRepository;
 import com.job.jobportal.Repository.UserInfoRepository;
-import org.springframework.util.StringUtils;
-
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
 import java.util.List;
 import java.util.Objects;
@@ -25,114 +24,79 @@ public class JobService {
 
     public JobInfo saveJob(JobInfo jobData) {
         Objects.requireNonNull(jobData, "Job data cannot be null");
-        try {
-            return jobRepo.save(jobData);
-        } catch (Exception e) {
-            throw new ServiceException("Failed to save job", e);
-        }
+        return jobRepo.save(jobData);
     }
 
     public List<JobInfo> getAllJobs() {
-        try {
-            return jobRepo.findAll();
-        } catch (Exception e) {
-            throw new ServiceException("Failed to fetch all jobs", e);
-        }
+        return jobRepo.findAll();
     }
 
     public JobInfo getById(String jobId) {
         Objects.requireNonNull(jobId, "Job ID cannot be null");
-        try {
-            return jobRepo.findById(jobId)
-                    .orElseThrow(() -> new NotFoundException("Job not found with id: " + jobId));
-        } catch (Exception e) {
-            throw new ServiceException("Failed to fetch job by id: " + jobId, e);
-        }
+        return jobRepo.findById(jobId)
+                .orElseThrow(() -> new NotFoundException("Job not found with id: " + jobId));
     }
 
     public void deleteById(String id) {
         Objects.requireNonNull(id, "Job ID cannot be null");
-        try {
-            if (!jobRepo.existsById(id)) {
-                throw new NotFoundException("Job not found with id: " + id);
-            }
-            jobRepo.deleteById(id);
-        } catch (Exception e) {
-            throw new ServiceException("Failed to delete job: " + id, e);
+        if (!jobRepo.existsById(id)) {
+            throw new NotFoundException("Job not found with id: " + id);
         }
+        jobRepo.deleteById(id);
     }
 
     public UserInfo getUser(String email) {
         Objects.requireNonNull(email, "Email cannot be null");
-        try {
-            return userRepo.findByUseremail(email)
-                    .stream()
-                    .findFirst()
-                    .orElseThrow(() -> new NotFoundException("User not found with email: " + email));
-        } catch (Exception e) {
-            throw new ServiceException("Failed to fetch user by email: " + email, e);
-        }
+        return userRepo.findByUseremail(email)
+                .stream()
+                .findFirst()
+                .orElseThrow(() -> new NotFoundException("User not found with email: " + email));
     }
 
     public List<UserResponseDto> getJobApplicants(String jobId) {
         Objects.requireNonNull(jobId, "Job ID cannot be null");
-        try {
-            JobInfo job = getById(jobId);
-            return job.getApplicants().stream()
-                    .map(email -> userRepo.findByUseremail(email))
-                    .filter(list -> !list.isEmpty())
-                    .map(list -> list.get(0))
-                    .map(user -> new UserResponseDto(
-                            user.getId(),
-                            user.getUsername(),
-                            user.getUseremail(),
-                            user.getUserrole().name()))
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new ServiceException("Failed to fetch job applicants for job: " + jobId, e);
-        }
+        JobInfo job = getById(jobId);
+        return job.getApplicants().stream()
+                .map(email -> userRepo.findByUseremail(email))
+                .filter(list -> !list.isEmpty())
+                .map(list -> list.get(0))
+                .map(user -> new UserResponseDto(
+                        user.getId(),
+                        user.getUsername(),
+                        user.getUseremail(),
+                        user.getUserrole().name()))
+                .collect(Collectors.toList());
     }
 
     public List<JobInfo> getJobsByPoster(String userEmail) {
         Objects.requireNonNull(userEmail, "User email cannot be null");
-        try {
-            return jobRepo.findByJobposteruseremail(userEmail);
-        } catch (Exception e) {
-            throw new ServiceException("Failed to fetch jobs by poster: " + userEmail, e);
-        }
+        return jobRepo.findByJobposteruseremail(userEmail);
     }
 
     public List<JobInfo> searchJobs(String technology, String keyword) {
-        try {
-            boolean hasTechnology = StringUtils.hasText(technology);
-            boolean hasKeyword = StringUtils.hasText(keyword);
+        boolean hasTechnology = StringUtils.hasText(technology);
+        boolean hasKeyword = StringUtils.hasText(keyword);
 
-            if (hasTechnology && hasKeyword) {
-                if (technology.contains(",")) {
-                    List<String> techList = java.util.Arrays.asList(technology.split("\\s*,\\s*"));
-                    return jobRepo.findByTechnologiesInAndJobnameContainingIgnoreCase(techList, keyword);
-                }
-                return jobRepo.findByTechnologyAndJobnameContainingIgnoreCase(technology, keyword);
-            } else if (hasTechnology) {
-                if (technology.contains(",")) {
-                    List<String> techList = java.util.Arrays.asList(technology.split("\\s*,\\s*"));
-                    return jobRepo.findByTechnologiesIn(techList);
-                }
-                return jobRepo.findByTechnologyContainingIgnoreCase(technology);
-            } else if (hasKeyword) {
-                return jobRepo.findByJobnameContainingIgnoreCase(keyword);
+        if (hasTechnology && hasKeyword) {
+            if (technology.contains(",")) {
+                List<String> techList = List.of(technology.split("\\s*,\\s*"));
+                return jobRepo.findByTechnologiesIn(techList).stream()
+                        .filter(job -> job.getJobname().toLowerCase().contains(keyword.toLowerCase()))
+                        .collect(Collectors.toList());
             }
-
-            return jobRepo.findRecentJobs();
-        } catch (Exception e) {
-            throw new ServiceException("Failed to search jobs", e);
+            return jobRepo.findByTechnologyContainingIgnoreCase(technology).stream()
+                    .filter(job -> job.getJobname().toLowerCase().contains(keyword.toLowerCase()))
+                    .collect(Collectors.toList());
+        } else if (hasTechnology) {
+            if (technology.contains(",")) {
+                List<String> techList = List.of(technology.split("\\s*,\\s*"));
+                return jobRepo.findByTechnologiesIn(techList);
+            }
+            return jobRepo.findByTechnologyContainingIgnoreCase(technology);
+        } else if (hasKeyword) {
+            return jobRepo.findByJobnameContainingIgnoreCase(keyword);
         }
-    }
-
-    public static class ServiceException extends RuntimeException {
-        public ServiceException(String message, Throwable cause) {
-            super(message, cause);
-        }
+        return jobRepo.findRecentJobs();
     }
 
     public static class NotFoundException extends RuntimeException {
